подключение шрифтов в отдельном файле

--- a/blocks/blocks.styl
+++ b/blocks/blocks.styl
@@ -25,28 +25,9 @@ body
   font: 80% Arial, sans-serif
   min-width: $page-width
 
-@font-face
-  font-family: plumb-re
-  src: url('../font/plumb-re.ttf')
-
-@font-face
-  font-family: plumb-me
-  src: url('../font/plumb-me.ttf')
-
-@font-face
-  font-family: plumb-li
-  src: url('../font/plumb-li.ttf')
-
-@font-face
-  font-family: plumb-bl
-  src: url('../font/plumb-bl.ttf')
-
-@font-face
-  font-family: plumb-bo
-  src: url('../font/plumb-bo.ttf')
-
 a
   transition: color 0.25s ease-out
 
+@import('fonts')
 @import('header/header')
 @import('navigation/navigation')
