--- a/blocks/blocks.styl
+++ b/blocks/blocks.styl
@@ -4,6 +4,8 @@ $blue-d = #334352
 $blue-l = #465867
 $brown-l = #c79a6b
 $grey-l = #d2d6d9
+$grey-d = #b4b4b4
+$grey-sd = #555
 
 clearfix()
   &::after,
@@ -31,3 +33,4 @@ a
 @import('fonts')
 @import('header/header')
 @import('navigation/navigation')
+@import('footer/footer')
