--- a/blocks/blocks.styl
+++ b/blocks/blocks.styl
@@ -5,7 +5,7 @@ $blue-l = #465867
 $brown-l = #c79a6b
 $grey-l = #d2d6d9
 $grey-d = #b4b4b4
-$grey-sd = #555
+$grey-xd = #555
 
 clearfix()
   &::after,
@@ -26,9 +26,6 @@ body
 body
   font: 80% Arial, sans-serif
   min-width: $page-width
-
-a
-  transition: color 0.25s ease-out
 
 @import('fonts')
 @import('header/header')
