--- a/blocks/footer/footer.styl
+++ b/blocks/footer/footer.styl
@@ -30,7 +30,7 @@
 
 
     background: no-repeat left center url("../i/logo-footer.png")
-    color: $grey-sd
+    color: $grey-xd
 
     text-transform: none
     text-decoration: none
