--- a/blocks/common.styl
+++ b/blocks/common.styl
@@ -63,7 +63,7 @@ p
     font-size: 19px
 
     min-height: 365px
-    max-width: 400px
+    max-width: 500px
     padding-left: 115px
     padding-top: 50px
 
@@ -103,6 +103,8 @@ p
         background-image: url('../i/behaviours-icons-cover.png')
 
         &_2
+          height: 60px
+          padding-top: 10px
           background-position: left -120px
 
         &_3
