minor fixes and link to store

--- a/blocks/common.styl
+++ b/blocks/common.styl
@@ -25,10 +25,30 @@ h2
 
 h3
   font-size: 32px
-  max-width: 500px
+  max-width: 510px
 
 p
   margin-bottom: 25px
+
+a
+  color: $brown-l
+
+  &:hover
+    text-decoration: none
+
+
+.sublink
+  z-index: 10
+  position: absolute
+  bottom: -16px
+  right: 0
+
+  font-size: 14px
+
+  text-transform: uppercase
+
+  &-wrap
+    position: relative
 
 .row
   width: $page-width
