incut minor fix

--- a/blocks/common.styl
+++ b/blocks/common.styl
@@ -143,7 +143,7 @@ a
   color: #fff
 
   &__covers
-    background: no-repeat left top url('../i/incut-covers.png')
+    background: no-repeat center url('../i/incut-covers.png')
 
 .warranty
   font-size: 38px
@@ -316,8 +316,7 @@ a
     text-align: center
     vertical-align: middle
 
-    &-image
-      border: 1px dashed $brown-l
+    border: 1px dashed $brown-l
 
   &-item
     display: block
