--- a/blocks/fonts.styl
+++ b/blocks/fonts.styl
@@ -18,3 +18,6 @@
   font-family: plumb-bo
   src: url('../font/plumb-bo.ttf')
 
+@font-face
+  font-family: calibri-bo
+  src: url('../font/calibri-bo.ttf')
