--- a/blocks/header/header.styl
+++ b/blocks/header/header.styl
@@ -42,9 +42,10 @@ $column-height = 160px
 
       color: $blue-l
 
-      &:hover,
-      &:active
-        color: $brown-l
+    &-item:hover,
+    &-item:active,
+    &-item__active
+      color: $brown-l !important
 
   &-ls &-navigation-item
     padding-left: 40px
