--- a/blocks/blocks.styl
+++ b/blocks/blocks.styl
@@ -10,6 +10,10 @@ $grey-xd = #555
 $grey-xxd = #333
 $yellow = #fed501
 
+$m-blue-l = rgba(102, 128, 144, .3)
+$m-blue-xl = #88b7d4
+$m-grey-l = rgba(181, 180, 180, .16)
+
 clearfix()
   &::after,
   &::before
@@ -24,7 +28,8 @@ clearfix()
 html
 body
   width: 100%
-  height: 100%
+  min-height: 100%
+  height: auto
 
 body
   font: 16px plumb-re, Arial, sans-serif
