--- a/blocks/navigation/navigation.styl
+++ b/blocks/navigation/navigation.styl
@@ -11,6 +11,9 @@
 
     clearfix()
 
+    .main &
+      box-shadow: inset 0 0 0 2px $m-blue-l
+
   &-item
     flex-grow: 1
 
@@ -20,6 +23,9 @@
 
     border-left: 1px solid $grey-l
     text-align: center
+
+    .main &
+      border-color: $m-blue-l
 
     &:first-child
       border-left: none
@@ -36,6 +42,9 @@
 
       text-transform: uppercase
       text-decoration: none
+
+      .main &
+        color: #fff
 
       &:hover,
       &:active
