--- a/blocks/common.styl
+++ b/blocks/common.styl
@@ -66,6 +66,11 @@ a
     &__main
       padding: 40px 0 100px 100px
 
+    &__warranty
+      max-width: 645px
+      margin-right: 70px
+      padding-right: 0
+
   &-stole-about
     padding-top: 30px
     max-width: 470px
@@ -260,6 +265,38 @@ a
     font-weight: normal
 
     text-transform: uppercase
+
+  &-limit
+    font-family: plumb-bo
+    font-size: 54px
+
+    margin: 25px 0 50px
+    padding: 1px 0 10px 0
+
+    color: $blue-d
+
+    border-top: 1px solid $grey-l
+    border-bottom: 6px solid $grey-l
+
+  &-for-all
+    position: relative
+    top: 8px
+
+    font-family: plumb-re
+    font-size: 33px
+
+    white-space: nowrap
+
+  &-license
+    float: right
+    margin-top: 23px
+
+    & IMG
+      display: block
+
+    &-description
+      font-size: 14px
+      margin-top: 20px
 
 .columns
   clearfix()
