add wholesalers page

--- a/blocks/portfolio/portfolio.styl
+++ b/blocks/portfolio/portfolio.styl
@@ -268,3 +268,30 @@
       height: 229px
 
       background-image: url('../portfolio/accs-7_s.jpg')
+
+  &-wholesalers
+    clearfix()
+
+    & .portfolio-item
+      float: left
+      height: 326px
+
+    &_1
+      width: 364px
+      background-image: url('../portfolio/wholesalers-1_s.jpg')
+
+    &_2
+      width: 631px
+      background-image: url('../portfolio/wholesalers-2_s.jpg')
+
+    &_3
+      width: 237px
+      background-image: url('../portfolio/wholesalers-3_s.jpg')
+
+    &_4
+      width: 225px
+      background-image: url('../portfolio/wholesalers-4_s.jpg')
+
+    &_5
+      width: 528px
+      background-image: url('../portfolio/wholesalers-5_s.jpg')
