--- a/blocks/common.styl
+++ b/blocks/common.styl
@@ -69,7 +69,11 @@ a
     &__warranty
       max-width: 645px
       margin-right: 70px
-      padding-right: 0
+      padding-right: 0px
+
+    &__wholesalers
+      padding: 18px 0 0 100px
+      max-width: 515px
 
   &-stole-about
     padding-top: 30px
@@ -524,3 +528,86 @@ a
 
       &__special
         background-position: -450px top
+
+.wholesalers
+  &-first-order
+    font-size: 16px
+    margin-top: 65px
+
+.advantages
+  position: relative
+
+  width: 615px
+  margin-top: 60px
+  padding: 35px 0 30px
+
+  border-top: 1px solid $grey-xl
+  border-bottom: 15px solid $grey-xl
+
+  &-title
+    position: absolute
+    left: 100px
+    top: -38px
+
+    font-family: plumb-bl
+    font-size: 18px
+
+    display: inline-block
+    padding: 0 10px
+
+    color: $grey-xxd
+    background-color: #fff
+    text-transform: uppercase
+
+  &-list
+    list-style: none
+    display: flex
+    flex-wrap: wrap
+
+  &-item
+    font-family: plumb-bo
+    font-size: 18px
+
+    width: 23%
+    margin-right: 2%
+    margin-bottom: 50px
+
+    color: $grey-xxd
+
+    &-icon
+      display: block
+
+      height: 51px
+      margin-bottom: 10px
+
+      background-repeat: no-repeat
+      background-position: 10px top
+      background-image: url('../i/advantages-icons.png')
+
+    &__orders &-icon
+      background-position-y: -66px
+
+    &__documents &-icon
+      background-position-y: -126px
+
+    &__warranty &-icon
+      background-position-y: -184px
+
+    &__sale &-icon
+      background-position-y: -255px
+
+    &__payment &-icon
+      background-position-y: -309px
+
+    &__examples &-icon
+      background-position-y: -371px
+
+    &__ad &-icon
+      background-position-y: -436px
+
+    &__warranty,
+    &__sale,
+    &__payment,
+    &__ad
+      margin-bottom: 0
+
